# preg

./: .gitignore  CMakeLists.txt  README.md  preg.pro
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
